--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -389,4 +389,12 @@
     <value>Remove</value>
     <comment>MainPage.xaml</comment>
   </data>
+  <data name="AddDeviceApi.Text" xml:space="preserve">
+    <value>APIversion</value>
+    <comment>AddOrChangeDevicePage.xaml</comment>
+  </data>
+  <data name="AddDeviceApiTextBox.PlaceholderText" xml:space="preserve">
+    <value>v1/</value>
+    <comment>AddOrChangeDevicePage.xaml</comment>
+  </data>
 </root>
