--- a/Strings/nl-NL/Resources.resw
+++ b/Strings/nl-NL/Resources.resw
@@ -401,4 +401,8 @@
     <value>Dubbele asset "{0}"</value>
     <comment>AddOrChangeAssetPage.xaml</comment>
   </data>
+  <data name="AddAssetUrlFileButton.Content" xml:space="preserve">
+    <value>Wählen Sie eine Datei</value>
+    <comment>AddOrChangeAssetPage.xaml</comment>
+  </data>
 </root>
