--- a/Strings/nl-NL/Resources.resw
+++ b/Strings/nl-NL/Resources.resw
@@ -194,11 +194,11 @@
     <comment>AddOrChangeDevicePage.xaml</comment>
   </data>
   <data name="AddDeviceIp.Text" xml:space="preserve">
-    <value>IP-adres</value>
+    <value>URL</value>
     <comment>AddOrChangeDevicePage.xaml</comment>
   </data>
   <data name="AddDeviceIpTextBox.PlaceholderText" xml:space="preserve">
-    <value>Zoals 192.168.1.10</value>
+    <value>Zoals http://192.168.1.10</value>
     <comment>AddOrChangeDevicePage.xaml</comment>
   </data>
   <data name="AddDeviceLocation.Text" xml:space="preserve">
